--- a/src/components/feed/Feed.css
+++ b/src/components/feed/Feed.css
@@ -1,18 +1,59 @@
 .wrapper{
     flex: 4;
     padding:20px 20px 20px 20px;
+    display:flex;
 }
 
 .container{
-    display: flex;
-    align-items: center;
-    display: flex;
+    width:100%;
+    height:100%;
+    display:flex;
+    
 }
 
 .about-feed{
-    display: inline block;
+    width:75%;
+    height:100%;
+    display:flex;
+    
 }
 
-.about-description{
+.description{
     margin-right: 20px;
+    margin-top: 300px;
+    padding: 20px;
+    box-shadow: 3px 1px #c9c8c8;
+
+}
+
+.des-img{
+    margin-top: 400px;
+    
+}
+
+#image1{ 
+    height: 500px;
+}
+
+.about-des{
+    margin: 2px;
+    font-size:20px;
+    font: weight 20px;
+    font-family:Roboto, "Helvetica Neue",;
+}
+
+.contact{
+    width:25%;
+    height:100%;
+    margin: left 75px;
+    display:flex;
+    float:left;
+    
+    
+}
+.info{
+    font: size 20px;
+    font-weight: 20px;
+    font-family: Roboto;
+    
 }
