--- a/src/pages/people/graduate/Graduate.css
+++ b/src/pages/people/graduate/Graduate.css
@@ -1,3 +1,24 @@
-.block-studentCategories{
-    margin-top:200px;
+.image{
+    height: 25%;
+    width: 40%;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+img{
+    height: 100px;
+    width: 100px;
+}
+.content{
+   
+   flex:4;
+}
+.grids{
+    margin-top:150px;
+    margin-left: 160px;
+    align-items: center;
+}
+
+h2{
+    text-align:center;
 }
