--- a/src/pages/people/undergraduate/UnderGraduate.css
+++ b/src/pages/people/undergraduate/UnderGraduate.css
@@ -1,4 +1,24 @@
 .image{
-    height: 300px;
-    width: 300px;
+    height: 25%;
+    width: 40%;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+img{
+    height: 100px;
+    width: 100px;
+}
+.content{
+   
+   flex:4;
+}
+.grids{
+    margin-top:150px;
+    margin-left: 160px;
+    align-items: center;
+}
+
+h2{
+    text-align:center;
 }
