--- a/src/pages/publication/journal/Journal.css
+++ b/src/pages/publication/journal/Journal.css
@@ -1,9 +1,9 @@
-.container{
+.journal-container{
     
     padding: 10px;
 }
 
 .main{
-    margin-top: 300px;
+    margin-top: 25%;
     display: inline-block;
 }
