--- a/src/pages/researchFacility/ResearchFacility.css
+++ b/src/pages/researchFacility/ResearchFacility.css
@@ -1,35 +1,66 @@
-.container{
-    flex: 4;
-    display: inline-block;
-    align-items: center;
-    
-   
-}
+.research-container{
+    justify-content: center;
+    padding:2px;
+    margin-top:20%;
+    margin-left: 10%;
+    margin-right: 10%;    
 
-.wrapper{
-    display:inline-block;
-  vertical-align:top;
-  margin-right:10px;
-  margin-top: 200px;
-  align-items: center;
 }
-.head{
-    align-items: center;
-    float: center;
-}
-h1{
-    float: left;
-  margin-right:10px;
- float: center;
+.sidebar {
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+    position:fixed;
+    overflow-y: scroll;
+    height: 100%;
+    overflow: auto;
+    box-shadow: 3px;
+    margin-top: 20%;
+  }
   
-}
-.content{
-    float: left;
-    margin-right:10px;
-    align-items: center;
-    background: rgb(149, 199, 219);
-}
-
-span{
-    font-weight: bold;
-}
+  /* Sidebar links */
+  .sidebar a {
+    display: block;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  /* Active/current link */
+  .sidebar a.active {
+    background-color: #6d7471;
+    color: white;
+  }
+  
+  /* Links on mouse-over */
+  .sidebar a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+  }
+  
+  /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+  div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+  }
+  
+  /* On screens that are less than 700px wide, make the sidebar into a topbar */
+  @media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+  }
+  
+  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+  @media screen and (max-width: 400px) {
+    .sidebar a {
+      text-align: center;
+      float: none;
+    }
+  }
