--- a/src/pages/publication/conference/Conference.css
+++ b/src/pages/publication/conference/Conference.css
@@ -1,9 +1,116 @@
-.container{
-    
-    padding: 10px;
-}
 
-.main{
-    margin-top: 300px;
-    display: inline-block;
-}
+/* .searchInputs {
+    margin-top: 105px;
+    display: flex;
+  }
+  
+  .search input {
+    background-color: rgb(165, 161, 161);
+    border: 0;
+    border-radius: 2px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    font-size: 18px;
+    padding: 15px;
+    height: 30px;
+    width: 300px;
+  }
+  
+  .searchIcon {
+    height: 60px;
+    width: 50px;
+    background-color: white;
+    display: grid;
+    place-items: center;
+  }
+  
+  input:focus {
+    outline: none;
+  }
+  .searchIcon svg {
+    font-size: 35px;
+  }
+  
+  .dataResult {
+    margin-top: 5px;
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    overflow: hidden;
+    overflow-y: auto;
+  }
+  
+  .dataResult::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .dataResult .dataItem {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    color: black;
+  }
+  
+  .dataItem p {
+    margin-left: 10px;
+  }
+  a {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    background-color: lightgrey;
+  }
+  
+  #clearBtn {
+    cursor: pointer;
+  } */
+
+  .main-div{
+    background-color:rgb(233, 232, 232)
+  }
+
+  .book-container {
+    margin:100px;
+    padding: 5px;
+    justify-content: center !important;
+    background-color:#ffff !important;
+  }
+
+  th{
+    font-size: 20px;
+  }
+
+  td{
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .input-box{
+    justify-content: center;
+    align-items: center;
+  }
+  .input-box input[type=text] {
+    padding: 6px;
+    float: right;
+    border: 1px solid #ccc;
+    margin-top: 8px;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    font-size: 20px;
+    border-radius: 5px;
+    height: 50px;
+    width: 25%;
+    }
+
+  @media screen and (max-width: 600px) {
+    .input-box input[type=text] {
+      float: none;
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin: 0;
+      padding: 14px;
+    }
+    }
