--- a/src/pages/publication/book/Book.css
+++ b/src/pages/publication/book/Book.css
@@ -91,6 +91,12 @@
     justify-content: center;
     align-items: center;
   }
+  .input-box i{
+    float: right;
+    margin-top: 25px;
+    font-size: 20px;
+    color: #777;
+  }
   .input-box input[type=text] {
     padding: 6px;
     float: right;
@@ -102,6 +108,8 @@
     border-radius: 5px;
     height: 50px;
     width: 25%;
+    flex: 1;
+    box-shadow: 5px #777;
     }
 
   @media screen and (max-width: 600px) {
@@ -114,3 +122,5 @@
       padding: 14px;
     }
     }
+
+    
