--- a/src/pages/publication/banner/Banner.css
+++ b/src/pages/publication/banner/Banner.css
@@ -7,16 +7,16 @@
     height:360px;
   } */
 
-  .w-100 {
+  /* .w-100 {
     width: 100% !important;
     height: 60vh;
     
-  }
+  } */
   /* #banner{
     box-shadow: 10px rgba(181, 175, 175, 0);
   } */
 
-  .carousel-item>a>img::after {
+  /* .carousel-item>a>img::after {
     box-shadow: 0px 0px 60px 40px black inset;
     bottom: 0;
     content: "";
@@ -25,4 +25,32 @@
     position: absolute;
     right: 0;
     top: 0;
+} */
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS */
+  .carousel-item.active {
+      background-image: url(https://armi.usgs.gov/uploads/20200121_111904.jpg);
+      background-size: cover;
+      background-position: 50% 45%;
+   }
+   .carousel-item img {
+      display:none !important;
+
+   }
+}
+
+.carousel-item {
+  height: 32rem;
+}
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+  box-shadow: 10px 10px 5px #ccc;
+      -moz-box-shadow: 10px 10px 5px #ccc;
+      -webkit-box-shadow: 10px 10px 5px #ccc;
+      -khtml-box-shadow: 10px 10px 5px #ccc;
 }
