--- a/src/pages/publication/book/Book.css
+++ b/src/pages/publication/book/Book.css
@@ -72,12 +72,12 @@
     background-color:rgb(233, 232, 232)
   }
 
-  .book-container {
+  /* .book-container {
     margin:100px;
     padding: 5px;
     justify-content: center !important;
-    background-color:#ffff !important;
-  }
+    background-color:rgb(132, 22, 22) !important;
+  } */
 
   th{
     font-size: 20px;
@@ -110,7 +110,20 @@
     width: 25%;
     flex: 1;
     box-shadow: 5px #777;
+    background-color:rgb(236, 239, 239);
+    
     }
+
+.input-box img{
+  background-color:rgb(203, 201, 197);
+  float: right;
+  margin-top:8px;
+  height:50px;
+  width: 50px;
+  border-radius: 5px;
+}
+
+  
 
   @media screen and (max-width: 600px) {
     .input-box input[type=text] {
@@ -121,6 +134,192 @@
       margin: 0;
       padding: 14px;
     }
+
+    .input-box img{
+      background-color:rgb(203, 201, 197);
+      margin-top:8px;
+      height:40px;
+      width: 40px;
+      border-radius: 5px;
+    }
     }
 
+  .search{
+    
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
+  }
+  .search__wrapper {
+    position: relative;
+  }
+  .search__field {
+    width: 50px;
+    height: 50px;
+    color: transparent;
+    font-family: Lato, sans-serif;
+    font-size: 1.35em;
+    padding: 0.35em 50px 0.35em 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+  }
+  .search__field:focus {
+    border-bottom-color: rgb(145, 81, 17);
+    width: 50vw;
+    color: #2b2b2b;
+    cursor: default;
+  }
+  .search__field:focus ~ .search__icon {
+    background-color: transparent;
+    cursor: pointer;
+    pointer-events: auto;
+  }
+  .search__icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #da9413;
+    width: 50px;
+    height: 50px;
+    font-size: 1.35em;
+    text-align: center;
+    border-color: transparent;
+    border-radius: 50%;
+    pointer-events: none;
+    display: inline-block;
+    transition: background-color 0.2s ease-in-out;
+  }
+  .search__field::-webkit-input-placeholder {
+    position: relative;
+    top: 0;
+    left: 0;
+    transition-property: top, color;
+    transition-duration: .1s;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
+  }
+  .search__field:-moz-placeholder {
+    position: relative;
+    top: 0;
+    left: 0;
+    transition-property: top, color;
+    transition-duration: .1s;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
+  }
+  .search__field::-moz-placeholder {
+    position: relative;
+    top: 0;
+    left: 0;
+    transition-property: top, color;
+    transition-duration: .1s;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
+  }
+  .search__field:-ms-input-placeholder {
+    position: relative;
+    top: 0;
+    left: 0;
+    transition-property: top, color;
+    transition-duration: .1s;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    perspective: 1000;
+  }
+  .search__field::-webkit-input-placeholder[style*=hidden] {
+    color: #83b0c1;
+    font-size: .65em;
+    font-weight: normal;
+    top: -20px;
+    opacity: 1;
+    visibility: visible !important;
+  }
+  .search__field:-moz-placeholder[style*=hidden] {
+    color: #83b0c1;
+    font-size: .65em;
+    font-weight: normal;
+    top: -20px;
+    opacity: 1;
+    visibility: visible !important;
+  }
+  .search__field::-moz-placeholder[style*=hidden] {
+    color: #83b0c1;
+    font-size: .65em;
+    font-weight: normal;
+    top: -20px;
+    opacity: 1;
+    visibility: visible !important;
+  }
+  .search__field:-ms-input-placeholder[style*=hidden] {
+    color: #83b0c1;
+    font-size: .65em;
+    font-weight: normal;
+    top: -20px;
+    opacity: 1;
+    visibility: visible !important;
+  }
+
+  .research-container{
+    margin:0;
+    padding: 0;
+    background-color: rgb(234, 238, 238);
+    display: flex ;
+    height: 100%;
+  }
+
+  .table-section{
+    background-color: #FFFFFF;
+    width: 70%;
+    height: auto;
+    margin-top:10%;
+    margin-left: 50px;
+    border-radius: 5px;
+    box-shadow: 10px;
+  }
+  .contact-section{
+    background-color: #FFFFFF;
+    width: 30%;
+    height: 100%;
+    margin-top:10%;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+    box-shadow: 10px;
+  }
+  .contact-section h1{
+    color: grey;
+    text-align: center;
+    font-family: cursive;
+  }
+  .contact-section p{
+    color: rgb(72, 75, 110);
+    padding-left: 10px;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
+
+  @media screen and (max-width:768px){
+    
+  }
     
