--- a/src/pages/publication/book/Book.css
+++ b/src/pages/publication/book/Book.css
@@ -1,93 +1,7 @@
 
-/* .searchInputs {
-    margin-top: 105px;
-    display: flex;
-  }
-  
-  .search input {
-    background-color: rgb(165, 161, 161);
-    border: 0;
-    border-radius: 2px;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
-    font-size: 18px;
-    padding: 15px;
-    height: 30px;
-    width: 300px;
-  }
-  
-  .searchIcon {
-    height: 60px;
-    width: 50px;
-    background-color: white;
-    display: grid;
-    place-items: center;
-  }
-  
-  input:focus {
-    outline: none;
-  }
-  .searchIcon svg {
-    font-size: 35px;
-  }
-  
-  .dataResult {
-    margin-top: 5px;
-    width: 300px;
-    height: 200px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    overflow: hidden;
-    overflow-y: auto;
-  }
-  
-  .dataResult::-webkit-scrollbar {
-    display: none;
-  }
-  
-  .dataResult .dataItem {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    color: black;
-  }
-  
-  .dataItem p {
-    margin-left: 10px;
-  }
-  a {
-    text-decoration: none;
-  }
-  
-  a:hover {
-    background-color: lightgrey;
-  }
-  
-  #clearBtn {
-    cursor: pointer;
-  } */
 
-  .main-div{
-    background-color:rgb(233, 232, 232)
-  }
-
-  /* .book-container {
-    margin:100px;
-    padding: 5px;
-    justify-content: center !important;
-    background-color:rgb(132, 22, 22) !important;
-  } */
-
-  th{
-    font-size: 20px;
-  }
-
-  td{
-    font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  .input-box{
+  
+  /* .input-box{
     justify-content: center;
     align-items: center;
   }
@@ -121,9 +35,121 @@
   height:50px;
   width: 50px;
   border-radius: 5px;
+} */
+
+th{
+  font-size: 20px;
 }
 
+td{
+  font-size: 16px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.searchbar{
+  margin-bottom: auto;
+  margin-top: 20px;
   
+  height: 60px;
+  background-color: #c7cad0;
+  border-radius: 30px;
+  padding: 10px;
+  float: center;
+  }
+
+  .search_input{
+  color: white;
+  border: 0;
+  outline: 0;
+  background: none;
+  width: 0;
+  caret-color:transparent;
+  line-height: 40px;
+  transition: width 0.4s linear;
+  }
+
+  .searchbar:hover > .search_input{
+  padding: 0 10px;
+  width: 450px;
+  caret-color:rgb(71, 20, 201);
+  transition: width 0.4s linear;
+  }
+
+  .searchbar:hover > .search_icon{
+  background: white;
+  color: #8db3df;
+  }
+
+  .search_icon{
+  height: 40px;
+  width: 40px;
+  float: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color:white;
+  text-decoration:none;
+  }
+  
+
+  .research-container{
+    margin:0;
+    padding: 0;
+    background-color: rgb(234, 238, 238);
+    display: flex ;
+    flex-direction: column;
+    height: 100%;
+  }
+
+
+  .table-contact{
+    margin:0;
+    padding: 0;
+    background-color: rgb(234, 238, 238);
+    display: flex ;
+    height: 100%;
+
+  }
+
+ 
+  .table-section{
+    background-color: #FFFFFF;
+    width: 70%;
+    height: auto;
+    margin-top:10%;
+    margin-left: 50px;
+    border-radius: 5px;
+    box-shadow: 10px;
+  }
+  .table-section h1{
+    text-align: center;
+    color:rgb(64, 16, 184);
+    font-weight: bold;
+  }
+  .contact-section{
+    background-color: #FFFFFF;
+    width: 30%;
+    height: auto;
+    margin-top:10%;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+    box-shadow: 10px;
+  }
+  .contact-section h1{
+    color: rgb(64, 16, 184);
+    text-align: center;
+    font-family: cursive;
+  }
+  .contact-section p{
+    color: rgb(72, 75, 110);
+    padding-left: 10px;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+    font-family: sans-serif;
+  }
 
   @media screen and (max-width: 600px) {
     .input-box input[type=text] {
@@ -142,184 +168,25 @@
       width: 40px;
       border-radius: 5px;
     }
+    .table-contact{
+      margin:0;
+      padding: 0;
+      background-color: rgb(234, 238, 238);
+      display: inline-block ;
+      height: 100%;
+  
+    }
+    .contact-section{
+      background-color: #FFFFFF;
+      width: 70%;
+      height: auto;
+      margin-top:10%;
+      margin-left: 50px;
+      margin-right: 50px;
+      border-radius: 5px;
+      box-shadow: 10px gray;
+    }
     }
 
-  .search{
-    
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-            transform: translateX(-50%) translateY(-50%);
-  }
-  .search__wrapper {
-    position: relative;
-  }
-  .search__field {
-    width: 50px;
-    height: 50px;
-    color: transparent;
-    font-family: Lato, sans-serif;
-    font-size: 1.35em;
-    padding: 0.35em 50px 0.35em 0;
-    border: 1px solid transparent;
-    border-radius: 0;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-  }
-  .search__field:focus {
-    border-bottom-color: rgb(145, 81, 17);
-    width: 50vw;
-    color: #2b2b2b;
-    cursor: default;
-  }
-  .search__field:focus ~ .search__icon {
-    background-color: transparent;
-    cursor: pointer;
-    pointer-events: auto;
-  }
-  .search__icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background-color: #da9413;
-    width: 50px;
-    height: 50px;
-    font-size: 1.35em;
-    text-align: center;
-    border-color: transparent;
-    border-radius: 50%;
-    pointer-events: none;
-    display: inline-block;
-    transition: background-color 0.2s ease-in-out;
-  }
-  .search__field::-webkit-input-placeholder {
-    position: relative;
-    top: 0;
-    left: 0;
-    transition-property: top, color;
-    transition-duration: .1s;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    perspective: 1000;
-  }
-  .search__field:-moz-placeholder {
-    position: relative;
-    top: 0;
-    left: 0;
-    transition-property: top, color;
-    transition-duration: .1s;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    perspective: 1000;
-  }
-  .search__field::-moz-placeholder {
-    position: relative;
-    top: 0;
-    left: 0;
-    transition-property: top, color;
-    transition-duration: .1s;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    perspective: 1000;
-  }
-  .search__field:-ms-input-placeholder {
-    position: relative;
-    top: 0;
-    left: 0;
-    transition-property: top, color;
-    transition-duration: .1s;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    perspective: 1000;
-  }
-  .search__field::-webkit-input-placeholder[style*=hidden] {
-    color: #83b0c1;
-    font-size: .65em;
-    font-weight: normal;
-    top: -20px;
-    opacity: 1;
-    visibility: visible !important;
-  }
-  .search__field:-moz-placeholder[style*=hidden] {
-    color: #83b0c1;
-    font-size: .65em;
-    font-weight: normal;
-    top: -20px;
-    opacity: 1;
-    visibility: visible !important;
-  }
-  .search__field::-moz-placeholder[style*=hidden] {
-    color: #83b0c1;
-    font-size: .65em;
-    font-weight: normal;
-    top: -20px;
-    opacity: 1;
-    visibility: visible !important;
-  }
-  .search__field:-ms-input-placeholder[style*=hidden] {
-    color: #83b0c1;
-    font-size: .65em;
-    font-weight: normal;
-    top: -20px;
-    opacity: 1;
-    visibility: visible !important;
-  }
-
-  .research-container{
-    margin:0;
-    padding: 0;
-    background-color: rgb(234, 238, 238);
-    display: flex ;
-    height: 100%;
-  }
-
-  .table-section{
-    background-color: #FFFFFF;
-    width: 70%;
-    height: auto;
-    margin-top:10%;
-    margin-left: 50px;
-    border-radius: 5px;
-    box-shadow: 10px;
-  }
-  .contact-section{
-    background-color: #FFFFFF;
-    width: 30%;
-    height: 100%;
-    margin-top:10%;
-    margin-left: 50px;
-    margin-right: 50px;
-    border-radius: 5px;
-    box-shadow: 10px;
-  }
-  .contact-section h1{
-    color: grey;
-    text-align: center;
-    font-family: cursive;
-  }
-  .contact-section p{
-    color: rgb(72, 75, 110);
-    padding-left: 10px;
-    align-items: center;
-    font-size: 18px;
-    font-weight: bold;
-    font-family: sans-serif;
-  }
-
-  @media screen and (max-width:768px){
-    
-  }
+  
     
