--- a/src/pages/publication/book/Book.css
+++ b/src/pages/publication/book/Book.css
@@ -130,7 +130,7 @@ td{
   .contact-section{
     background-color: #FFFFFF;
     width: 30%;
-    height: auto;
+    height: 100%;
     margin-top:10%;
     margin-left: 50px;
     margin-right: 50px;
